package com.raullopezpenalva.newsletter_service.model;

public enum SubscriptionStatus {
    PENDING,
    ACTIVE,
    UNSUBSCRIBED
}
