package com.raullopezpenalva.newsletter_service.modules.newsletter.domain.model;
    
import jakarta.persistence.*;
import jakarta.validation.constraints.Email;
import jakarta.validation.constraints.NotBlank;
import lombok.*;
import org.hibernate.annotations.CreationTimestamp;
import io.swagger.v3.oas.annotations.media.Schema;

import java.time.LocalDateTime;
import java.util.UUID;

@Entity
@Table(name = "subscribers")
@Getter
@Setter
@NoArgsConstructor
@AllArgsConstructor
@Builder
@Schema(description = "Subscriber entity representing a newsletter subscriber")
public class Subscriber {

    @Id
    @GeneratedValue
    @NonNull
    @Schema(description = "Unique identifier of the subscriber", example = "123e4567-e89b-12d3-a456-426614174000")
    private UUID id;

    @Email
    @NotBlank
    @Column(nullable = false, unique = true)
    @Schema(description = "Email address of the subscriber", example = "subscriber@example.com")
    private String email;

    @Enumerated(EnumType.STRING)
    @Column(nullable = false)
    @Schema(description = "Subscription status of the subscriber", example = "SUBSCRIBED")
    private SubscriptionStatus status;

    @Schema(description = "Indicates if the subscriber was created by a user", example = "true")
    private boolean userCreated;

    @CreationTimestamp
    @Schema(description = "Timestamp when the subscriber was created", example = "2023-01-01T12:00:00Z")
    private LocalDateTime createdAt;

    @Schema(description = "Timestamp when the subscriber was verified", example = "2023-01-02T12:00:00Z")
    private LocalDateTime verifiedAt;

    // Getters and Setters (can be generated by Lombok)

    public UUID getId() {
        return id;
    }

    public String getEmail() {
        return email;
    }

    public SubscriptionStatus getStatus() {
        return status;
    }

    public boolean isUserCreated() {
        return userCreated;
    }

    public LocalDateTime getCreatedAt() {
        return createdAt;
    }

    public LocalDateTime getVerifiedAt() {
        return verifiedAt;
    }

    public void setEmail(String email) {
        this.email = email;
    }

    public void setStatus(SubscriptionStatus status) {
        this.status = status;
    }

    public void setUserCreated(boolean userCreated) {
        this.userCreated = userCreated;
    }

    public void setCreatedAt(LocalDateTime createdAt) {
        this.createdAt = createdAt;
    }

    public void setVerifiedAt(LocalDateTime verifiedAt) {
        this.verifiedAt = verifiedAt;
    }
}