package com.raullopezpenalva.newsletter_service.modules.platform.tokens.domain;

public enum TokenType {
    CONFIRMATION,
    UNSUBSCRIBE
}
