@startuml class_diagram
' Enumeraciones
enum SubscriptionStatus {
  PENDING
  ACTIVE
  UNSUBSCRIBED
}

enum TokenType {
  CONFIRMATION
  UNSUBSCRIBE
}

enum UserCreated {
  TRUE
  FALSE
}

' Entidades principales
class Subscriber {
  - UUID id
  - String email
  - SubscriptionStatus status
  - LocalDateTime createdAt
  - LocalDateTime verifiedAt
  - boolean userCreated
}

class VerificationToken {
  - UUID id
  - String token
  - UUID subscribeId
  - TokenType type
  - LocalDateTime expiresAt
  - boolean used
}

' Servicios (nivel conceptual)
class NewsletterService {
  + subscribe(email, userCreated)
  + verifyToken(token)
  + confirmUnsubscribe(token, reason)
}

class TokenService {
  + generateToken(type, subscriber)
  + validateToken(token, type)
  + invalidateOldTokens(subscriber, type)
}

class EmailService {
  + sendConfirmationEmail(subscriber, token)
  + sendUnsubscribeEmail(subscriber, token)
}

class FrontendService {
  + GUI for confirm the UNSUBSCRIBE
  + POLL for the DB
}

' Relaciones
Subscriber "1" -- "0..*" VerificationToken : owns
VerificationToken --> Subscriber : refers to
NewsletterService --> TokenService
NewsletterService --> EmailService
NewsletterService --> Subscriber
TokenService --> VerificationToken
NewsletterService --> FrontendService
@enduml
